# hello_cpp

./: CMakeLists.txt  Makefile  README.md  buildrun.bat  hello.cpp  main  main.cpp
dependencies/: hello.cpp  hello.h
dependencies/headers/: hello.h
functions/: hello.cpp
headers/: hello.h
